Fix package name in readme and sample app manifest (regression introduced by last two commits)

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -10,6 +10,6 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
-    <activity android:name="net.core.helper.ProcessPhoenix"/>
+    <activity android:name="com.jakewharton.processphoenix.ProcessPhoenix"/>
   </application>
 </manifest>
