--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ allprojects {
 }
 
 ext {
-  minSdkVersion = 11
+  minSdkVersion = 14
   compileSdkVersion = 30
+
+  androidxTestRunner = 'androidx.test:runner:1.3.0'
+  androidxTestRules = 'androidx.test:rules:1.3.0'
+  androidxTestUiAutomator = 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
