--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=jakewharton
 POM_DEVELOPER_NAME=Jake Wharton
+
+android.useAndroidX=true
+android.enableJetifier=false
