--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=1.0.2
+VERSION_NAME=1.0.3-SNAPSHOT
 
 POM_DESCRIPTION=A special activity which facilitates restarting your application process.
 
