--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
   repositories {
-    mavenCentral()
+    jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.3'
+    classpath 'com.android.tools.build:gradle:2.2.2'
   }
 }
 
@@ -15,8 +15,8 @@ allprojects {
 
 ext {
   minSdkVersion = 4
-  compileSdkVersion = 24
-  buildToolsVersion = '24.0.2'
+  compileSdkVersion = 25
+  buildToolsVersion = '25.0.0'
 
   ci = 'true'.equals(System.getenv('CI'))
 
