--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=1.1.2-SNAPSHOT
+VERSION_NAME=2.0.0
 
 POM_DESCRIPTION=A special activity which facilitates restarting your application process.
 
