--- a/process-phoenix/build.gradle
+++ b/process-phoenix/build.gradle
@@ -16,10 +16,9 @@ android {
   dexOptions {
     preDexLibraries = !rootProject.ext.ci
   }
-  
-  // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
-  libraryVariants.all {
-    it.generateBuildConfig.enabled = false
+
+  buildFeatures {
+    buildConfig = false
   }
 }
 
