--- a/process-phoenix/src/main/AndroidManifest.xml
+++ b/process-phoenix/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name=".ProcessPhoenix"
         android:theme="@android:style/Theme.Translucent.NoTitleBar"
         android:process=":phoenix"
+        android:exported="false"
         />
   </application>
 </manifest>
