--- a/process-phoenix/build.gradle
+++ b/process-phoenix/build.gradle
@@ -1,20 +1,11 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.vanniktech.maven.publish'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
+  namespace 'com.jakewharton.processphoenix'
 
   defaultConfig {
-    minSdkVersion rootProject.ext.minSdkVersion
-  }
-
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
-
-  buildFeatures {
-    buildConfig = false
+    minSdk rootProject.ext.minSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
   }
 }
-
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
