--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,22 +1,17 @@
 apply plugin: 'com.android.application'
 
-dependencies {
-  implementation project(':process-phoenix')
-}
-
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
+  namespace 'com.jakewharton.processphoenix.sample'
 
   defaultConfig {
-    applicationId 'com.jakewharton.processphoenix.sample'
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.compileSdkVersion
+    minSdk rootProject.ext.minSdkVersion
+    targetSdk rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
     versionCode 1
     versionName "$VERSION_NAME"
   }
+}
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
+dependencies {
+  implementation project(':process-phoenix')
 }
