Add properties to enable Central release

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=jakewharton
 POM_DEVELOPER_NAME=Jake Wharton
+
+SONATYPE_AUTOMATIC_RELEASE=true
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
