Apply suggestions from code review
Co-authored-by: Jake Wharton <github@jakewharton.com>

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
     <service
       android:name=".RestartService"
       android:exported="true"
-      android:foregroundServiceType="shortService" />
+      android:foregroundServiceType="shortService"
+      />
   </application>
 </manifest>
