Support service processes (#69)
* Move PhoenixActivity to a separate class

* Add support for restarting a Service.

* Apply suggestions from code review

Co-authored-by: Jake Wharton <github@jakewharton.com>

* Split Activity and Service methods, keeping the existing methods Activity-only.

* Run spotless code formatting

---------

Co-authored-by: jobhh <job@dreambyte.nl>
Co-authored-by: Jake Wharton <github@jakewharton.com>

--- a/process-phoenix/src/main/AndroidManifest.xml
+++ b/process-phoenix/src/main/AndroidManifest.xml
@@ -2,10 +2,16 @@
 
   <application>
     <activity
-      android:name=".ProcessPhoenix"
+      android:name=".PhoenixActivity"
       android:exported="false"
       android:process=":phoenix"
       android:theme="@android:style/Theme.Translucent.NoTitleBar"
       />
+
+    <service
+        android:name=".PhoenixService"
+        android:exported="false"
+        android:process=":phoenix"
+        />
   </application>
 </manifest>
