--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=3.0.0
+VERSION_NAME=3.1.0-SNAPSHOT
 
 POM_DESCRIPTION=A special activity which facilitates restarting your application process.
 
